Fix leave island